fixed spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -392,7 +392,8 @@ button:hover {
   width: 100%;
   margin-top: 70px;
   padding: 20px;
-  max-width: 650px;
+  max-width: 600px;
+  margin-left: 35px;
   margin-right: -50px;
 }
 
